# my-proj

.github/workflows/: syntax-check.yaml
on-board/: BUILD  Calorie.go  WORKSPACE  bazel-bin  bazel-on-board  bazel-out  bazel-testlogs  go.mod
on-board/cmd/calorie/: BUILD.bazel  Calorie.go  Dockerfile
